Feature/unit tests and activity (#1)
* feature/unit-tests-and-activity: Create tests and Activity in RKO process

* feature/unit-tests-and-activity: Create tests and Activity in RKO process

* feature/unit-tests-and-activity: small fixes

* feature/unit-tests-and-activity: small fixes

* feature/unit-tests-and-activity: pretty code

* feature/unit-tests-and-activity: pretty code

* feature/unit-tests-and-activity: small fix in build.gradle.kts